--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,7 +3,7 @@
   "name": "__MSG_extensionName__",
   "description": "__MSG_extensionDescription__",
   "default_locale": "en",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "author": "allan@cairns.id.au",
   "icons": {
     "16": "icons/icon16.png",
@@ -45,7 +45,7 @@
   "web_accessible_resources": ["icons/icon128.png"],
   "browser_specific_settings": {
     "gecko": {
-      "id": "simple_speed_dial@cairns.id.au",
+      "id": "giddys_speed_dial@cairns.id.au",
       "strict_min_version": "59.0"
     }
   }
